--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <h2>Istanbul-Tashkent</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur magni hic vel nostrum, et officiis.</p>
 </body>
 </html>
