--- a/web.html
+++ b/web.html
@@ -6,7 +6,8 @@
     <title>Book</title>
 </head>
 <body>
-    <h1>Salom Dunyo</h1>
+    <h1>Salom Toshkentdan Istanbulga</h1>
+    <h2>Hammaga Salom</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi ullam exercitationem repudiandae
         provident fugiat amet nesciunt ducimus veritatis quis.</p>
 </body>
