--- a/web.html
+++ b/web.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Salom Toshkentdan Istanbulga</h1>
-    <h2>Hammaga Salom</h2>
+    <h2>my first WebSite</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi ullam exercitationem repudiandae
         provident fugiat amet nesciunt ducimus veritatis quis.</p>
 </body>
